# us-gdp-regime-1920

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  constraints.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: default.yaml
docs/: article_outline.md  article_peer_review.md  article_plan.md  data_dictionary.md  linkedin_post.md  medium_ready_article.md  methods_note.md  publishing_zenodo.md  source_notes.md
notebooks/: 01_data_extraction_validation.ipynb  02_regression_piecewise_regimes.ipynb  03_article_figures_tables.ipynb  04_fiscal_debt_tax_context.ipynb  05_tax_regime_effects.ipynb  06_distributional_tax_wage_analysis.ipynb
prompts/: 01_code_development.md  02_notebook_development.md  03_article_development.md
reports/: .gitignore  airxiv.sty  us_gdp_regime_report.tex
src/us_gdp_regime/: __init__.py  article_exports.py  cli.py  config.py  data_sources.py  distributional.py  fiscal.py  inference.py  models.py  pipeline.py  plotting.py  report_numbers.py  robustness.py  source_validation.py  tax_effects.py  transform.py
tests/: test_article_exports.py  test_cli.py  test_config.py  test_data_sources.py  test_distributional.py  test_fiscal.py  test_inference.py  test_models.py  test_report_numbers.py  test_robustness.py  test_source_validation.py  test_tax_effects.py  test_transform.py
