[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "us-gdp-regime"
version = "1.1.1"
description = "United States GDP trend and piecewise growth regime analysis from 1920 onward."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Diogo Ribeiro" }]
dependencies = [
    "arch>=6.3",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "requests>=2.32",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
notebooks = [
    "jupyterlab>=4.2",
    "nbformat>=5.10",
]

[project.scripts]
us-gdp-regimes = "us_gdp_regime.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
us_gdp_regime = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN"]

[tool.mypy]
# No fixed python_version: mypy targets the running interpreter so it can parse
# third-party stubs (e.g. numpy) that use 3.12+ PEP 695 `type` statements. The
# minimum supported runtime is still 3.11 (requires-python), exercised by CI.
strict = true
ignore_missing_imports = true
